--- a/js/index.html
+++ b/js/index.html
@@ -5,8 +5,11 @@
         <title></title>
     </head>
     <body>
-        <!-- <script type="text/javascript" src="./main.js"></script> -->
-        <!-- <script type="text/javascript" src="./string.js"></script> -->
+        <script type="text/javascript" src="./main.js"></script>
+        <script type="text/javascript" src="./string.js"></script>
         <script type="text/javascript" src="./conditional.js"></script>
+        <script type="text/javascript">
+            console.log("Hello from HTML");
+        </script>
     </body>
 </html>
